--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
+<div class="row">
+  <div class="col-md-12">
 
 <app-header></app-header>
+  </div></div>
   <div class="row">
       <div class="col-md-12">
 
@@ -7,4 +10,4 @@
       </div>
     </div>
 
-<app-footer></app-footer>
+<app-footer ></app-footer>
