--- a/src/app/vastu-score-check/vastu-score-check.component.css
+++ b/src/app/vastu-score-check/vastu-score-check.component.css
@@ -148,22 +148,7 @@ color:
 rgba(80, 55, 150, 1);
 
 }
-.modal-content {
-  border-radius: 10px;
-}
-.row {
 
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-.roomTypeList li {
-  color: #ff0000;
-}
-.roomTypeList li span {
-  color: #666666;
-}
 .active .box {
   background: #FDEEE6;
   box-shadow: 0px 0px 4px rgba(255, 112, 33, 0.3);
@@ -186,4 +171,7 @@ h3{
   text-align: center;
 letter-spacing: 1.16px;
 text-transform: uppercase;
+}
+.boxSelect{
+background: violet;
 }
