--- a/src/app/vastu-score-check/vastu-score-tool/vastu-score-tool.component.css
+++ b/src/app/vastu-score-check/vastu-score-tool/vastu-score-tool.component.css
@@ -30,6 +30,13 @@ right: 10.81%;
   color: #666666;
   letter-spacing: 1px;
   text-transform: uppercase;
+  font-family: Noto Sans;
+
+
+  line-height: 24px;
+  letter-spacing: 2px;
+
+
 }
 .improvment-req-number {
   margin: 0px 0px 30px 0px;
@@ -141,3 +148,28 @@ right: 10.81%;
   background: #fffae6;
   color: #ffcd02;
 }
+.header, .roomsWrap .custom-control, .partiularRoomWrpa .custom-control {
+  display: none;
+}
+.roomsCheckListBox, .aboutRoomWrap {
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px 20px 50px;
+}
+.btn-fav.marun {
+  background: #fae8ed;
+  color: #d11e4c;
+}.mb-2, .my-2 {
+  margin-bottom: .5rem!important;
+}
+.mr-2, .mx-2 {
+  margin-right: .5rem!important;
+}
+.modal-content {
+  border-radius: 10px;
+}
+h6{
+  color:
+  rgba(80, 55, 150, 1);
+
+  }
