--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+/* common csss for ul breadcrumb */
 ul.breadcrumb {
   padding: 10px 16px;
   list-style: none;
@@ -21,4 +22,22 @@ ul.breadcrumb li a:hover {
   color: #01447e;
   text-decoration: underline;
 }
+/* common css for Modal */
+
 .modal{background: rgba(0,0,0, .5)}
+.modal-content {
+  border-radius: 10px;
+}
+.row {
+
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.roomTypeList li {
+  color: #ff0000;
+}
+.roomTypeList li span {
+  color: #666666;
+}
