--- a/src/app/vastu-score-check/vastu-score-check.component.css
+++ b/src/app/vastu-score-check/vastu-score-check.component.css
@@ -136,7 +136,7 @@ input[type=checkbox]:after {
   background: #FF7021;
   border-radius: 8px;
  }
- .colorBox{
+ .boxColor{
 background: #FDEEE6;
  }
 .modal.show{
