--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,8 @@
        <router-outlet></router-outlet>
       </div>
     </div>
+    <!-- <div class="row">
+      <app-footer ></app-footer>
+    </div> -->
 
-<!-- <app-footer ></app-footer> -->
+
