--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="    min-height: 660px;">
 
   <app-breadcrumb></app-breadcrumb>
   <div class="row">
